fixing bugs on edit card & empty or too long text

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -66,7 +66,7 @@
 }
 .item__edit__input {
   width: 100%;
-  min-height: 90px;
+  height: 90px;
   border: none;
   border-radius: 4px;
   outline: none;
